crates/next-custom-transforms/tests/errors/next-ssg/server-side-after-static-paths/output.js
export var __N_SSG = true;
export const getServerSideProps = function getServerSideProps() {
}
